Wed Oct  2 17:13:22 2002  Ossama Othman  <ossama@uci.edu>

	* orbsvcs/orbsvcs/Log/BasicLog_i.h:
	* orbsvcs/orbsvcs/Log/BasicLog_i.cpp:

	  Fixed emulated exception support.

Wed Oct  2 17:01:13 2002  Ossama Othman  <ossama@uci.edu>

	* orbsvcs/orbsvcs/Log/LogNotification.h:
	* orbsvcs/orbsvcs/Log/Log_i.h:

	  Doxygen-ated these headers.

	* orbsvcs/orbsvcs/Log/LogNotification.cpp:
	* orbsvcs/orbsvcs/Log/Log_i.cpp:

	  Fixed a large number of memory leaks.

	  Fixed emulated exception support.

	  Removed unnecessary static_cast hacks.  Use the ".in()"
	  accessors in the "_var" variables introduced in the above memory
	  leak fixes instead.  "Use the C++ mapping Luke."

	  Updated to conform to ACE/TAO coding/style guidelines.

	  Added missing ACE_RCSID macros.

Tue Oct  1 23:27:48 2002  Ossama Othman  <ossama@uci.edu>

	* orbsvcs/LoadBalancer/Monitor_Signal_Handler.h:
	* orbsvcs/LoadBalancer/Monitor_Signal_Handler.cpp:

	  New signal handler designed to ensure proper cleanup of load
	  monitors registered with the LoadManager in "PULL" style load
	  monitoring configurations.  Signals are handled synchronously in
	  the multi-threaded build case through an Active Object, and
	  asynchronously through the ORB's Reactor in the single-threaded
	  build case using the same signal handler employed by the
	  LoadManager binary.

	* orbsvcs/LoadBalancer/LoadMonitor.cpp (main):

	  Instantiate and activate the Monitor_Signal_Handler to allow for
	  graceful shutdown of the LoadMonitor executable.

	* orbsvcs/LoadBalancer/LoadMonitor.bor (OBJFILES):
	* orbsvcs/LoadBalancer/Makefile.LoadMonitor (SRC)
	* orbsvcs/LoadBalancer/LoadMonitor.dsp:
	* orbsvcs/LoadBalancer/LoadMonitor_Static.dsp:

	  Added `Monitor_Signal_Handler' and `Signal_Handler' to the list
	  of source/object files.
	
Tue Oct  1 14:53:46 2002  Ossama Othman  <ossama@uci.edu>

	* orbsvcs/orbsvcs/LoadBalancing/LB_Location_Index_Map.cpp:

	  Corrected explicit template instantiations so that the template