@@ -9,9 +9,6 @@
 //    This module defines the Log Generated Events module
 //    for the OMG's Telecom Event Log Service
 //
-// = AUTHOR
-//    D A Hanvey (d.hanvey@qub.ac.uk)
-//
 // ============================================================================
 
 #ifndef DS_LOG_NOTIFICATION_IDL
@@ -64,7 +61,7 @@ module DsLogNotification
 	TimeT		time;
   };
 
-  // definition of AttributeValueChange notification, the event generated by 
+  // definition of AttributeValueChange notification, the event generated by
   // Log when a Log's attribute has changed
 
   typedef unsigned short AttributeType;
@@ -87,7 +84,7 @@ module DsLogNotification
 		any new_value;
   };
 
-  // definition of StateChange notification, the event generated by 
+  // definition of StateChange notification, the event generated by
   // Log when a Log's state has changed
 
   typedef unsigned short StateType;
@@ -102,7 +99,7 @@ module DsLogNotification
 	StateType type;
 	any new_value;
   };
-  
+
   struct ProcessingErrorAlarm {
 	// Event generated by a log when a problem occurs within the log.
 	// The highest 20 bits or error_num are reserved for vender
@@ -111,5 +108,5 @@ module DsLogNotification
 	string error_string;
   };
 };
-		
+
 #endif /* DS_LOG_NOTIFICATION_IDL */
