@@ -1,3 +1,9 @@
+Wed Oct  2 17:25:18 2002  Ossama Othman  <ossama@uci.edu>
+
+	* orbsvcs/orbsvcs/Log/Log_Constraint_Visitors.cpp:
+
+	  Fixed incorrect use of emulated exception macros.
+
 Wed Oct  2 17:13:22 2002  Ossama Othman  <ossama@uci.edu>
 
 	* orbsvcs/orbsvcs/Log/BasicLog_i.h:
